--- a/package.json
+++ b/package.json
@@ -15,27 +15,28 @@
     "test": "vitest --coverage",
     "prettier": "prettier --write .",
     "prepare": "husky install",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "check-types": "tsc --noEmit --skipLibCheck"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.609.0",
-    "@axiomhq/winston": "^1.0.0",
-    "@dnd-kit/core": "^6.1.0",
-    "@dnd-kit/sortable": "^8.0.0",
+    "@aws-sdk/client-s3": "^3.946.0",
+    "@axiomhq/winston": "^1.3.1",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@hookstate/core": "^4.0.1",
-    "@hookstate/devtools": "^4.0.1",
+    "@hookstate/core": "^4.0.2",
+    "@hookstate/devtools": "^4.0.3",
     "@mui/lab": "^5.0.0-alpha.171",
     "@mui/material": "^5.16.0",
     "@mui/x-date-pickers": "^7.9.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.17.0",
-    "@tanstack/react-table": "^8.19.2",
+    "@prisma/client": "^6.19.0",
+    "@tanstack/react-table": "^8.21.3",
     "@types/bcryptjs": "^2.4.6",
-    "@types/dropzone": "^5.7.8",
-    "@types/lodash": "^4.17.6",
+    "@types/dropzone": "^5.7.9",
+    "@types/lodash": "^4.17.21",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "10.4.14",
@@ -44,27 +45,29 @@
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
-    "eslint": "^8.42.0",
-    "eslint-config-next": "^13.4.4",
-    "formik": "^2.4.6",
-    "framer-motion": "^11.2.13",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.7",
+    "formik": "^2.4.9",
+    "framer-motion": "^12.23.25",
     "json-as-xlsx": "^2.5.6",
     "lodash": "^4.17.21",
-    "next": "^14.2.4",
-    "next-auth": "^4.24.7",
+    "next": "16.0.10",
+    "next-auth": "^4.24.13",
     "postcss": "8.4.24",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-dropzone": "^14.2.3",
-    "react-hot-toast": "^2.4.1",
+    "quill": "^1.3.7",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
+    "react-dropzone": "^14.3.8",
+    "react-hot-toast": "^2.6.0",
     "react-quill": "^2.0.0",
-    "react-select": "^5.7.4",
+    "react-quill-new": "^3.6.0",
+    "react-select": "^5.10.2",
     "react-timing-hooks": "^4.0.2",
-    "sharp": "^0.33.4",
+    "sharp": "^0.34.5",
     "swiper": "^10.3.1",
     "tailwindcss": "3.3.2",
-    "usehooks-ts": "^3.1.0",
-    "winston": "^3.13.0",
+    "usehooks-ts": "^3.1.1",
+    "winston": "^3.18.3",
     "winston-daily-rotate-file": "^5.0.0",
     "yup": "^1.4.0",
     "zod": "^3.23.8",
@@ -74,15 +77,15 @@
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@tailwindcss/typography": "^0.5.9",
-    "@types/node": "^20.14.10",
-    "@vitest/coverage-v8": "^1.6.0",
+    "@types/node": "^24.10.1",
+    "@vitest/coverage-v8": "^4.0.15",
     "cross-env": "^7.0.3",
     "husky": "^9.0.11",
     "prettier": "^3.3.2",
-    "prisma": "^5.17.0",
+    "prisma": "^6.19.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.5.3",
-    "vitest": "^1.6.0"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.15"
   },
   "resolutions": {
     "webpack": "^5"
